[project]
name = "tweakwcs"
description = "A package for correcting alignment errors in WCS objects"
requires-python = ">=3.10"
authors = [
    { name = "Mihai Cara" },
]
dependencies = [
    "numpy",
    "astropy>=5.0.4",
    "gwcs>=0.14.0",
    "stsci.stimage",
    "spherical_geometry>=1.2.20",
    "packaging>=21.1",
]
license-files = ["LICENSE.txt"]
dynamic = [
    "version",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/spacetelescope/tweakwcs"
"Bug Tracker" = "https://github.com/spacetelescope/tweakwcs/issues"
Documentation = "http://spacetelescope.github.io/tweakwcs/"
"Source Code" = "https://github.com/spacetelescope/tweakwcs"

[project.optional-dependencies]
test = [
    "pytest>=9.0",
    "pytest-cov",
    "scipy",
]
docs = [
    "tomli; python_version<='3.11'",
    "numpydoc",
    "sphinx>=7.2",
    "sphinx-automodapi",
    "sphinx-rtd-theme>1.2.0",
    "graphviz",
]

[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools_scm[toml]>=3.6",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true

[tool.setuptools.package-data]
"*" = [
    "notebooks/*.ipynb",
]
tweakwcs = [
    "README.rst",
    "LICENSE.txt",
    "CHANGELOG.rst",
]
"tweakwcs.tests.data" = [
    "tweakwcs/tests/data/*",
]

[tool.setuptools_scm]
write_to = "tweakwcs/_version.py"

[tool.ruff]
lint.select = ["ALL"]
line-length = 100
lint.extend-select = [
    "F",
    "W",
    "E",
    "C4",
    "COM",
]
exclude = [
    "docs",
    ".tox",
    ".eggs",
    "build",
    "notebooks",
]

lint.ignore = [
    # flake8-builtins (A) : shadowing a Python built-in.
    # New ones should be avoided and is up to maintainers to enforce.
    "A00",

    # flake8-bugbear (B)
    "B008",  # FunctionCallArgumentDefault

    # flake8-commas (COM)
    "COM812",  # TrailingCommaMissing
    "COM819",  # TrailingCommaProhibited

    # pydocstyle (D)
    # Missing Docstrings
    "D102",  # Missing docstring in public method. Don't check b/c docstring inheritance.
    "D105",  # Missing docstring in magic method. Don't check b/c class docstring.
    # Whitespace Issues
    "D200",  # FitsOnOneLine
    # Docstring Content Issues
    "D410",  # BlankLineAfterSection. Using D412 instead.
    "D400",  # EndsInPeriod.  NOTE: might want to revisit this.

    # pycodestyle (E, W)
    "E711",  # NoneComparison  (see unfixable)
    "E741",  # AmbiguousVariableName. Physics variables are often poor code variables

    # flake8-fixme (FIX)
    "FIX002",  # Line contains TODO | notes for improvements are OK iff the code works

    # pep8-naming (N)
    "N803",  # invalid-argument-name. Physics variables are often poor code variables
    "N806",  # non-lowercase-variable-in-function. Physics variables are often poor code variables

    # pandas-vet (PD)
    "PD",

    # flake8-self (SLF)
    "SLF001", # private member access

    # flake8-todos (TD)
    "TD002",  # Missing author in TODO

    # flake8-return (RET)
    "RET505",  # superfluous-else-return
    "RET506",  # superfluous-else-raise

    # Ruff-specific rules (RUF)
    "RUF005",  # unpack-instead-of-concatenating-to-collection-literal -- it's not clearly faster.

    "Q000",  # Single quotes found but double quotes preferred

    "TID252", # Prefer absolute imports over relative imports from parent modules
]

[tool.ruff.lint.extend-per-file-ignores]
"setup.py" = [
    "INP001",  # Part of configuration, not a package.
    "ICN001",
    "UP018"
]
"test_*.py" = [
    "B018",  # UselessExpression
    "D",  # pydocstyle
    "PGH001",  # No builtin eval() allowed
    "S101",  # Use of assert detected
]
".pyinstaller/*.py" = ["INP001"]  # Not a package.
"conftest.py" = ["INP001"]  # Part of configuration, not a package.
"docs/*.py" = [
    "INP001",  # implicit-namespace-package. The examples are not a package.
]
"examples/*.py" = [
    "E402",   # Imports are done as needed.
    "INP001", # implicit-namespace-package. The examples are not a package.
    "T203"    # pprint found
]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true
mypy-init-return = true

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.flake8-type-checking]
exempt-modules = []

[tool.ruff.lint.isort]
known-first-party = ["astropy", "extension_helpers"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.build_sphinx]
source-dir = "docs"
build-dir = "docs/_build"
all_files = "1"

[tool.distutils.upload_docs]
upload-dir = "docs/_build/html"
show-response = 1

[tool.pytest]
minversion = "9.0"
norecursedirs = [
    "build",
    "docs/_build",
    ".tox",
]
doctest_plus = "enabled"
addopts = ["--ignore=build"]

[tool.coverage.run]
omit = [
    "tweakwcs/_version.py",
    "tweakwcs/tests/*.py",
    "*/tweakwcs/tests/*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError",
    "raise AssertionError",
    "raise NotImplementedError",
    "def main\\(.*\\):",
    "pragma: py{ignore_python_version}",
]
